[package]
name = "CounterStrikeRespectMania"
version = "0.1.0"
edition = "2021"

[features]
default = ["three_d"]
three_d = ["dep:egui_render_three_d", "egui_overlay/three_d"]

[dependencies]
process-memory = "0.5.0"
winapi = { version = "0.3.9", features = [ "tlhelp32", "handleapi", "winuser" ] }
egui = "0.29.0"
egui_overlay = { version = "0.9.0", default-features = true, features = ["egui_default", "glfw_default"] }
egui_window_glfw_passthrough = "0.9.0"
egui_render_three_d = { version = "0.9.0", optional = true }
three-d-text-builder = "0.7.0"
three-d-asset = "=0.9.2"
display-info = "0.5.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
enigo = "0.3.0"